<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="example.coolp.mainactivity.MainActivity">

    <EditText
        android:id="@+id/nameTextEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

    <EditText
        android:id="@+id/emailTextEdit"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextEdit" />

    <TextView
        android:id="@+id/deptEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="24dp"
        android:text="@string/Department"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextEdit" />


    <TextView
        android:id="@+id/textmoodEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="66dp"
        android:layout_marginTop="18dp"
        android:text="@string/MoodText"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dptGroupEdit" />

    <SeekBar
        android:id="@+id/seekBarEdit"
        android:layout_width="213dp"
        android:layout_height="0dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="17dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textmoodEdit" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarEdit"
        tools:layout_editor_absoluteX="8dp" />


    <RadioGroup
        android:id="@+id/dptGroupEdit"
        android:layout_width="276dp"
        android:layout_height="185dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="11dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deptEditText">

        <RadioButton
            android:id="@+id/SIS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="SIS" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="CS" />

        <RadioButton
            android:id="@+id/BIO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="BIO" />

        <RadioButton
            android:id="@+id/Others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Others" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>
